--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="/img/bikcraft.svg" alt=" Bikcraft"></a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="/bicletas.html">Bicicletas</a></li>
+          <li><a href="/seguros.html">Seguros</a></li>
+          <li><a href="/contato.html">Contato</a></li>
+        </ul>
+
+      </nav>
+    </div>
+  </header>
 
 </body>
 
